plugins {
    id 'java'
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
    id 'org.jetbrains.kotlin.jvm' version '2.1.0'
}

idea {
    module {
        inheritOutputDirs = true
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation fileTree(dir: 'lib', include: ['*.jar'])
    implementation group: 'com.google.guava', name: 'guava', version: '23.5-jre'
	implementation 'org.reflections:reflections:0.9.10'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
    implementation group: 'org.scala-lang', name: 'scala-library', version: '2.12.4'
    implementation group: 'com.orsonpdf', name: 'orsonpdf', version: '1.8'
    implementation group: 'com.object-refinery', name: 'orsoncharts', version: '1.7'
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
    implementation group: 'com.panayotis', name: 'javaplot', version: '0.5.0'
    implementation group: 'gov.nist.math', name: 'jama', version: '1.0.3'
    implementation group: 'com.googlecode.efficient-java-matrix-library', name: 'ejml', version: '0.25'
    implementation group: 'args4j', name: 'args4j', version: '2.33'
    implementation 'org.jfree:jfreechart-swt:1.0'
    implementation 'org.jfree:swtgraphics2d:1.0'
    implementation 'org.jfree:jfreesvg:3.3'
    implementation 'org.jfree:jcommon:1.0.24'
    implementation 'org.jfree:jfreechart:1.0.19'
    implementation 'org.apache.xmlgraphics:batik:1.16'
    implementation 'org.apache.xmlgraphics:batik-svggen:1.16'
    implementation 'org.apache.xmlgraphics:batik-dom:1.16'
    implementation 'org.apache.xmlgraphics:batik-transcoder:1.16'
    implementation 'com.itextpdf:itextpdf:5.5.13.3'
    implementation 'net.sf.epsgraphics:epsgraphics:1.2'
    implementation group: 'org.javassist', name: 'javassist', version: '3.24.0-GA'
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.12.1'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.1'
    implementation 'org.jetbrains:annotations:13.0'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'org.apache.commons:commons-rng-core:1.4'
    implementation 'org.apache.commons:commons-rng-simple:1.4'
    implementation 'org.apache.commons:commons-lang3:3.4'
    implementation 'commons-io:commons-io:2.11.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

version = '1.0'

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes 'Implementation-Title': 'EARS',
                   'Implementation-Version': '1.0',
                   'Main-Class': 'org.um.feri.ears.engine.ExecuteTournaments'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } //include all dependencies in jar
    }
    exclude {
    	
    }
}

sourceSets {
    main {
        java {
            srcDir 'src'
        }
        resources {
            srcDirs 'Weight', 'test_data', 'src', 'res'
        }
   }
}

configurations {
    jar.archiveFileName = 'ears.jar'
}

javafx {
    version = '17.0.7'
    modules = ['javafx.controls', 'javafx.fxml']
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

kotlin {
    jvmToolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

compileKotlin {
    kotlinOptions {
        jvmTarget = "17"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "17"
    }
}
